# changeguard

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.md.jinja2  pyproject.toml  pyrightconfig.json
.github/: README.remotified.md  dependencies.yml  license-header
.github/workflows/: build-and-test.yml
changeguard/: __init__.py  changeguard.py  changeguard_test.py  cli.py
changeguard/examples/: hash-audit_example.sh  local-docker_example.sh  test-list-paths_example.sh  usage_example.sh
scripts/: changeguard.sh  format.sh  generate-readme.sh  generate.sh  pin-extra-reqs.py  pin-extra-reqs.sh  pre.sh  prettier.sh  quickrun.sh  run-all-examples.sh  run-all-tests.sh  run-edit-mode-smoke-test.sh  run-wheel-smoke-test.sh  type-check.sh
scripts/utilities/: ensure-reqs.sh  mark_dirty.sh  pin-extra-reqs.py  pin-extra-reqs.sh
