[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "changeguard"
version = "0.0.1-alpha.1"
description = "CLI to check if any of the original files in a repository/directory change over the course of a precommit script."
authors = [{name = "AYF", email = "realazthat@gmail.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Operating System :: OS Independent",
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12'
]
dependencies = [
  "pathspec >=0.12,<1",
  "pyyaml >=6,<7",
  "rich >=13,<14",
  "rich-argparse >=1,<2",
  "types-pyyaml >=6,<7"
]
keywords = [
]

[project.optional-dependencies]
# Set of dependencies that are known to work. To add a new dependency here, add
# a version range to the `projecct.dependencies` section above, and then run
# `EXTRA=prod bash scripts/pin-extra-reqs.sh`. Optionally, delete all the
# contents to repin all the dependencies (probably a good idea to do once in a
# while).
prod = [
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "pathspec==0.12.1",
  "pygments==2.17.2",
  "pyyaml==6.0.1",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "types-pyyaml==6.0.12.20240311",
  "typing-extensions==4.10.0"
]
# Set of dev dependencies, all pinned, so that they are known to work. To add a
# new dependency here, add the unpinned package name here, and then run
# `EXTRA=dev bash scripts/pin-extra-reqs.sh`.
dev = [
  "argcomplete==3.2.3",
  "autoflake==2.3.1",
  "colorama==0.4.6",
  "defusedxml==0.7.1",
  "importlib-metadata==7.1.0",
  "isort==5.13.2",
  "jinja2==3.1.3",
  "markdown-it-py==3.0.0",
  "markupsafe==2.1.5",
  "mdurl==0.1.2",
  "mypy==1.8.0",
  "mypy-extensions==1.0.0",
  "nodeenv==1.8.0",
  "pathspec==0.12.1",
  "pexpect==4.9.0",
  "pip-licenses==4.3.4",
  "platformdirs==4.2.0",
  "prettytable==3.10.0",
  "ptyprocess==0.7.0",
  "pyflakes==3.2.0",
  "pygments==2.17.2",
  "pyright==1.1.352",
  "pyyaml==6.0.1",
  "rich==13.7.1",
  "rich-argparse==1.4.0",
  "snipinator==1.0.9",
  "toml-sort==0.23.1",
  "tomli==2.0.1",
  "tomlkit==0.12.4",
  "types-colorama==0.4.15.20240311",
  "types-pyyaml==6.0.12.20240311",
  "typing-extensions==4.10.0",
  "wcwidth==0.2.13",
  "xmltodict==0.13.0",
  "yapf==0.40.2",
  "yq==3.2.3",
  "zipp==3.18.1"
]

[project.scripts]
changeguard = "changeguard.cli:main"

[project.urls]
Homepage = "https://github.com/realazthat/changeguard"
Documentation = "https://github.com/realazthat/changeguard"
Repository = "https://github.com/realazthat/changeguard"

[tool.changeguard-project-metadata]
last_unstable_release = "0.0.0"
last_stable_release = "0.0.0"

[tool.setuptools]
packages = ["changeguard"]

[tool.tomlsort]
